@@ -26,7 +26,7 @@ Seventh Framework Programme (FP7/2007-2013) under grant agreement no. 262608
     Package: \tab DDIwR\cr
     Type:    \tab Package\cr
     Version: \tab 0.2-0\cr
-    Date:    \tab 2014-09-07\cr
+    Date:    \tab 2014-09-15\cr
     License: \tab GPL (>= 2)\cr
     }
 }
